<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:background="#EBEBEB"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/teaRg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/toutiao"
            style="@style/RadioButton"
            android:textColor="#3D9D01"
            android:text="@string/toutiao"
            android:checked="false" />

        <RadioButton
            android:id="@+id/baike"
            style="@style/RadioButton"
            android:text="@string/baike" />

        <RadioButton
            android:id="@+id/zixun"
            style="@style/RadioButton"
            android:text="@string/zixun" />

        <RadioButton
            android:id="@+id/jingying"
            style="@style/RadioButton"
            android:text="@string/jingying" />

        <RadioButton
            android:id="@+id/shuju"
            style="@style/RadioButton"
            android:text="@string/shuju" />

        <RadioButton
            android:id="@+id/more"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/more"
            android:button="@null" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/slide"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#3D9D01"
        android:orientation="horizontal" >
    </LinearLayout>

</LinearLayout>